[gd_scene load_steps=4 format=3 uid="uid://3he6n57jvn28"]

[ext_resource type="SpriteFrames" path="res://assets/res/notes/E_N.res" id="1"]
[ext_resource type="Script" path="res://scripts/notes/Note.gd" id="2"]

[sub_resource type="ShaderMaterial" id="2"]
resource_local_to_scene = true

[node name="Note" type="Node2D"]
material = SubResource("2")
script = ExtResource("2")

[node name="HoldPiece" type="Sprite2D" parent="."]
centered = false
region_enabled = true

[node name="HoldEnd" type="Sprite2D" parent="."]
centered = false
region_enabled = true

[node name="NoteContainer" type="CenterContainer" parent="."]

[node name="Note" type="AnimatedSprite2D" parent="NoteContainer"]
sprite_frames = ExtResource("1")
animation = &"event"
